--- a/DocVault.Api/.github/.github/workflows/ci.yml
+++ b/DocVault.Api/.github/.github/workflows/ci.yml
@@ -1,27 +1,59 @@
 name: CI
-on: pull_request:
-  branches: [ dev, main ]
+
+on:
+  pull_request:
+    branches: [ dev, main ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         project: [ 'DocVault.Api', 'docvault-ui' ]
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # -------------------------
+      # .NET Backend
+      # -------------------------
       - name: Setup .NET
+        if: matrix.project == 'DocVault.Api'
         uses: actions/setup-dotnet@v3
-        with: dotnet-version: 8.0.x
+        with:
+          dotnet-version: 8.0.x
+
+      - name: Restore API dependencies
+        if: matrix.project == 'DocVault.Api'
+        run: dotnet restore DocVault.Api/DocVault.Api.csproj
+
       - name: Build API
         if: matrix.project == 'DocVault.Api'
-        run: dotnet build DocVault.Api/DocVault.Api.csproj
+        run: dotnet build DocVault.Api/DocVault.Api.csproj --configuration Release --no-restore
+
+      - name: Run API Tests
+        if: matrix.project == 'DocVault.Api'
+        run: dotnet test --no-build --verbosity normal
+
+      # -------------------------
+      # Angular Frontend
+      # -------------------------
       - name: Setup Node
         if: matrix.project == 'docvault-ui'
         uses: actions/setup-node@v3
-        with: node-version: '20'
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: docvault-ui/package-lock.json
+
+      - name: Install Frontend Dependencies
+        if: matrix.project == 'docvault-ui'
+        working-directory: docvault-ui
+        run: npm ci
+
       - name: Build Angular
         if: matrix.project == 'docvault-ui'
-        run: |
-          cd docvault-ui
-          npm install
-          npm run build
+        working-directory: docvault-ui
+        run: npm run build -- --configuration pr
