--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,8 @@
     "@angular/platform-server": "^21.1.0",
     "@angular/router": "^21.1.0",
     "@angular/ssr": "^21.1.4",
+    "@azure/msal-angular": "^5.0.4",
+    "@azure/msal-browser": "^5.2.0",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
