--- a/DocVault.Api/.github/.github/workflows/.github/workflows/deploy.yml
+++ b/DocVault.Api/.github/.github/workflows/.github/workflows/deploy.yml
@@ -1,33 +1,59 @@
 name: CD
+
 on:
   push:
     branches: [ main ]
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      # -----------------------
+      # Backend Deployment
+      # -----------------------
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
-        with: dotnet-version: 8.0.x
+        with:
+          dotnet-version: 8.0.x
+
+      - name: Restore API
+        run: dotnet restore DocVault.Api/DocVault.Api.csproj
+
       - name: Publish API
         run: dotnet publish DocVault.Api/DocVault.Api.csproj -c Release -o ./publish
+
       - name: Deploy API to App Service
         uses: azure/webapps-deploy@v2
         with:
           app-name: docvault-api
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: ./publish
+
+      # -----------------------
+      # Frontend Deployment
+      # -----------------------
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      - name: Install Angular Dependencies
+        working-directory: frontend   # change if folder name is different
+        run: npm ci
+
       - name: Build Angular
-        run: |
-          cd docvault-ui
-          npm install
-          npm run build
-      - name: Deploy Angular
+        working-directory: frontend
+        run: npm run build -- --configuration production
+
+      - name: Deploy Angular to Static Web App
         uses: azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APP_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "docvault-ui/dist"
-          output_location: "/"
+          app_location: "frontend"
+          output_location: "dist"
