--- a/DocVault.Api/DocVault.Api.csproj
+++ b/DocVault.Api/DocVault.Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <!-- Cosmos DB SDK -->
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.57.0" />
 
     <!-- Newtonsoft.Json for Cosmos dependency -->
@@ -16,6 +17,7 @@
     <!-- Azure Blob Storage SDK -->
     <PackageReference Include="Azure.Storage.Blobs" Version="12.23.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
 
