--- a/DocVault.Api/DocVault.Api.csproj
+++ b/DocVault.Api/DocVault.Api.csproj
@@ -8,18 +8,22 @@
 
   <ItemGroup>
     <!-- Cosmos DB SDK -->
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.57.0" />
-    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.16.0" />
-
-    <!-- Newtonsoft.Json for Cosmos dependency -->
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-
+    
     <!-- Azure Blob Storage SDK -->
     <PackageReference Include="Azure.Storage.Blobs" Version="12.23.0" />
+    
+    <!-- Azure Identity for Key Vault (Managed Identity) -->
+    <PackageReference Include="Azure.Identity" Version="1.17.1" />
+    
+    <!-- JWT Auth -->
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.16.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
+    
+    <!-- Swagger -->
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.3" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
-
 
 </Project>
