--- a/DocVault.Api/DocVault.Api.csproj
+++ b/DocVault.Api/DocVault.Api.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <!-- Cosmos DB SDK -->
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.57.0" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="4.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     
     <!-- Azure Blob Storage SDK -->
