--- a/DocVault.Api/DocVault.Api.csproj
+++ b/DocVault.Api/DocVault.Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <!-- Cosmos DB SDK -->
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.4.0" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.57.0" />
     <PackageReference Include="Microsoft.Identity.Web" Version="4.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
