git commit -m Fix 401 Unauthorized error by adding JWT Authorization header using HTTP interceptor

--- a/DocVault.Api/appsettings.json
+++ b/DocVault.Api/appsettings.json
@@ -8,10 +8,14 @@
   "AllowedHosts": "*",
   "AzureAd": {
     "TenantId": "4290a4f8-06d1-4535-ad77-859d562298ce",
-    "ClientId": "8ffa4b4d-3ec5-40f0-a18c-0f976bf80e21"
+    "ClientId": "8ffa4b4d-3ec5-40f0-a18c-0f976bf80e21",
+      "Instance": "https://login.microsoftonline.com/",
+        "Audience": "api://d9058600-ebf2-44c7-8137-06ffa19802a5"
+
+
   },
   "KeyVault": {
-    "Uri": ""
+    "Uri": "https://docvault-kv123.vault.azure.net/"
   },
   "Storage": {
     "ConnectionString": ""
