--- a/DocVault.Api/DocVault.Api.csproj
+++ b/DocVault.Api/DocVault.Api.csproj
@@ -8,8 +8,11 @@
 
   <ItemGroup>
     <!-- Cosmos DB SDK -->
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.4.0" />
+    <PackageReference Include="Azure.Identity" Version="1.17.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.57.0" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="2.17.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.16.0" />
 
     <!-- Newtonsoft.Json for Cosmos dependency -->
@@ -18,8 +21,8 @@
     <!-- Azure Blob Storage SDK -->
     <PackageReference Include="Azure.Storage.Blobs" Version="12.23.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.3" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
+ 
 
 
 </Project>
